Rename commit files endpoint, add descriptins
